--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -5,4 +5,9 @@
 database.url=jdbc:postgresql://localhost:5433/topjava
 database.username=postgres
 database.password=miron
+
+
 database.init=true
+jpa.showSql=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
